# huffman

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  huffcode.c  huffman.c  huffman.h  run_tests.sh
.github/workflows/: build.yml  codeql-analysis.yml
huffman/: Makefile  getopt.c  huffcode.c  huffcode.dsp  huffman.c  huffman.dsp  huffman.dsw  huffman.h
test_data/: 128_byte_2_symbol
test_data/reported_issues/issue2/: id:000000,sig:11,src:000000,op:flip1,pos:0  id:000001,sig:11,src:000000,op:flip1,pos:3  id:000002,sig:11,src:000000,op:flip1,pos:3  id:000003,sig:11,src:000000,op:flip1,pos:9  id:000004,sig:11,src:000000,op:flip1,pos:9  id:000005,sig:11,src:000000,op:flip1,pos:21  id:000006,sig:11,src:000000,op:flip1,pos:39  id:000007,sig:11,src:000000,op:flip1,pos:133  id:000008,sig:11,src:000000,op:flip2,pos:9  id:000009,sig:11,src:000000,op:flip4,pos:106  id:000010,sig:11,src:000000,op:arith8,pos:9,val:-10  id:000011,sig:11,src:000000,op:arith8,pos:27,val:+15  id:000012,sig:11,src:000000,op:arith8,pos:35,val:+29  id:000013,sig:11,src:000000,op:arith8,pos:136,val:-9  id:000014,sig:11,src:000000,op:int8,pos:3,val:+0
